added the word 'item' to the 'Add' button

--- a/WebApplication25/Views/Home/AddItemPage.cshtml
+++ b/WebApplication25/Views/Home/AddItemPage.cshtml
@@ -10,6 +10,6 @@
                 <option value="@c.CategoryId">@c.CategoryName</option>
             }
         </select>
-        <button class="btn btn-info">Add!</button>
+        <button class="btn btn-info">Add item!</button>
     </form>
 </div>
